[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["config"]
description = "Parse config files."
documentation = "https://docs.rs/mg-settings/"
license = "MIT"
name = "mg-settings"
repository = "https://github.com/antoyo/mg-settings"
version = "0.2.0"

[dependencies]
error-chain = "^0.10.0"

[dependencies.mg-settings-macros]
path = "mg-settings-macros"
version = "^0.2.0"

[features]
nightly = []
