[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["config"]
description = "Parse config files."
documentation = "https://docs.rs/mg-settings/"
license = "MIT"
name = "mg-settings"
repository = "https://github.com/antoyo/mg-settings"
version = "0.3.2"

[dependencies]

[dependencies.mg-settings-macros]
path = "mg-settings-macros"
version = "^0.3.0"

[features]
nightly = []
