[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Help custom derive for mg-settings"
license = "MIT"
name = "mg-settings-macros"
repository = "https://github.com/antoyo/mg-settings"
version = "0.1.4"

[dependencies]
env_logger = "^0.4.2"
log = "^0.3.7"
quote = "^0.3"
syn = "^0.11"

[lib]
proc-macro = true
