[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Help custom derive for mg-settings"
license = "MIT"
name = "mg-settings-macros"
repository = "https://github.com/antoyo/mg-settings"
version = "0.4.2"

[dependencies]
env_logger = "0.5"
log = "0.4"
quote = "0.5"
syn = { version = "0.13", features = ["extra-traits"] }

[dev-dependencies.mg-settings]
path = ".."
version = "^0.4"

[lib]
proc-macro = true
